--- a/about.html
+++ b/about.html
@@ -10,8 +10,17 @@
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-  <h1>Hello World</h1>
+  <h1 class="page-title">About me</h1>
+  <h3>Front-end developer from São Paulo, Brazil</h3>
+  <p class="about-intro mt-4">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? Cumque adipisci, non
+    dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis harum.
+  </p>
   <a href="/">Homepage</a>
+  <div id="contact" class="my-5">
+    <h2>📮 Contact me</h2>
+    <a href="mailto:[email]" class="email-link"> rebecca2t@gmail.com </a>
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
