--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h2>👋 Hi I am</h2>
+    <h1>Rebecca Tamachiro</h1>
+    <h3>👩‍💻 Front-end developer, based in Lisbon</h3>
     <a href="/about.html"> About</a>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
