--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <h2>👋 Hi I am</h2>
     <h1>Rebecca Tamachiro</h1>
     <h3>👩‍💻 Front-end developer, based in Lisbon</h3>
-    <a href="/about.html"> About</a>
+    <div class="navigation-links">
+      <a href="/about.html#contact" class="contact-link">Contact me</a>
+      <a href="/about.html" class="about-link">About me</a>
+    </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
