--- a/about.html
+++ b/about.html
@@ -16,7 +16,21 @@
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? Cumque adipisci, non
     dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis harum.
   </p>
-  <a href="/">Homepage</a>
+  <a href="/">homepage</a>
+  <div class="container">
+    <div class="row mt-4">
+      <div class="col-sm-4 mt-2">
+        <img src="images/yoga.png" class="img-fluid p-2 shadow rounded" alt="Yoga App preview" />
+      </div>
+      <div class="col-sm-4 mt-2">
+        <img src="images/weather.png" class="img-fluid p-2 shadow rounded" alt="Weather App preview" />
+      </div>
+      <div class="col-sm-4 mt-2">
+        <img src="images/yogurt.png" class="img-fluid p-2 shadow rounded" alt="Yogurt Page preview" />
+      </div>
+    </div>
+  </div>
+  </div>
   <div id="contact" class="my-5">
     <h2>📮 Contact me</h2>
     <a href="mailto:[email]" class="email-link"> rebecca2t@gmail.com </a>
