--- a/index.html
+++ b/index.html
@@ -17,6 +17,50 @@
       <a href="/about.html#contact" class="contact-link">Contact me</a>
       <a href="/about.html" class="about-link">About me</a>
     </div>
+    <div class="container mb-5">
+      <div class="row mt-3">
+        <div class="col-6">
+          <img src="images/yoga.png" class="img-fluid" alt="Yoga App preview" />
+        </div>
+        <div class="col-6 projects-brief">
+          <h2>Yoga app</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <a href="#" class="project-link">Launch yoga app</a>
+        </div>
+    <div class="row mt-5">
+      <div class="col-6 projects-brief">
+        <h2>Weather app</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+          quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+          eos eveniet alias temporibus deserunt veritatis minima fugiat
+          explicabo eum dolore.
+        </p>
+        <a href="#" class="project-link">Launch weather app</a>
+      </div>
+      <div class="col-6">
+        <img src="images/weather.png" class="img-fluid" alt="Weather App preview" />
+      </div>
+      <div class="row mt-5">
+        <div class="col-6">
+          <img src="images/yogurt.png" class="img-fluid" alt="Yogurt page preview" />
+        </div>
+        <div class="col-6 projects-brief">
+          <h2>Yogurt landing page</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <a href="#" class="project-link">Launch yogurt page</a>
+        </div>
+      </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
