Added Bootstrap Navbar

--- a/index.html
+++ b/index.html
@@ -10,13 +10,38 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <h2>👋 Hi I am</h2>
-    <h1>Rebecca Tamachiro</h1>
-    <h3>👩‍💻 Front-end developer, based in Lisbon</h3>
-    <div class="navigation-links">
-      <a href="/about.html#contact" class="contact-link">Contact me</a>
-      <a href="/about.html" class="about-link">About me</a>
-    </div>
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+      <a class="navbar-brand" href="/">Rebecca</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about.html">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about.html#contact">Contact Me</a>
+          </li>
+          </ul>
+          </div>
+          </div>
+          </nav>
+          <div class="home-content">
+
+            <h2>👋 Hi I am</h2>
+            <h1>Rebecca Tamachiro</h1>
+            <h3>👩‍💻 Front-end developer, based in Lisbon</h3>
+            <div class="navigation-links">
+              <a href="/about.html#contact" class="contact-link">Contact me</a>
+              <a href="/about.html" class="about-link">About me</a>
+            </div>
+          </div>
     <div class="container mb-5">
       <div class="row mt-3">
         <div class="col-6">
