--- a/about.html
+++ b/about.html
@@ -10,6 +10,28 @@
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+      <a class="navbar-brand" href="/">Rebecca</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about.html">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about.html#contact">Contact Me</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
   <h1 class="page-title">About me</h1>
   <h3>Front-end developer from São Paulo, Brazil</h3>
   <p class="about-intro mt-4">
