--- a/index.html
+++ b/index.html
@@ -28,26 +28,25 @@
           <li class="nav-item">
             <a class="nav-link" href="/about.html#contact">Contact Me</a>
           </li>
-          </ul>
-          </div>
-          </div>
-          </nav>
-          <div class="home-content">
-
-            <h2>👋 Hi I am</h2>
-            <h1>Rebecca Tamachiro</h1>
-            <h3>👩‍💻 Front-end developer, based in Lisbon</h3>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="home-content">
+      <h2>👋 Hi I am</h2>
+      <h1>Rebecca Tamachiro</h1>
+      <h3>👩‍💻 Front-end developer, based in Lisbon</h3>
             <div class="navigation-links">
               <a href="/about.html#contact" class="contact-link">Contact me</a>
               <a href="/about.html" class="about-link">About me</a>
             </div>
-          </div>
-    <div class="container mb-5">
-      <div class="row mt-3">
-        <div class="col-6">
+  </div>
+  <div class="container mb-5">
+    <div class="row mt-3">
+        <div class="col-sm-6 d-none d-sm-block">
           <img src="images/yoga.png" class="img-fluid" alt="Yoga App preview" />
         </div>
-        <div class="col-6 projects-brief">
+        <div class="col-sm-6 projects-brief">
           <h2>Yoga app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -57,8 +56,12 @@
           </p>
           <a href="#" class="project-link">Launch yoga app</a>
         </div>
+        <div class="col-sm-6 d-block d-sm-none mt-5">
+          <img src="images/yoga.png" class="img-fluid" alt="Yoga App preview" />
+        </div>
+    </div>
     <div class="row mt-5">
-      <div class="col-6 projects-brief">
+      <div class="col-sm-6 projects-brief">
         <h2>Weather app</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -68,24 +71,26 @@
         </p>
         <a href="#" class="project-link">Launch weather app</a>
       </div>
-      <div class="col-6">
-        <img src="images/weather.png" class="img-fluid" alt="Weather App preview" />
+      <div class="col-sm-6">
+        <img src="images/weather.png" class="img-fluid mt-5" alt="Weather App preview" />
       </div>
-      <div class="row mt-5">
-        <div class="col-6">
-          <img src="images/yogurt.png" class="img-fluid" alt="Yogurt page preview" />
-        </div>
-        <div class="col-6 projects-brief">
-          <h2>Yogurt landing page</h2>
-          <p>
+    </div>
+    <div class="row mt-5">
+      <div class="col-sm-6">
+        <img src="images/yogurt.png" class="img-fluid d-none d-sm-block">
+      </div>
+      <div class="col-sm-6 projects-brief">
+        <h2>Yogurt landing page</h2>
+        <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
-          </p>
-          <a href="#" class="project-link">Launch yogurt page</a>
-        </div>
+        </p>
+        <a href="#" class="project-link">Launch yogurt page</a>
       </div>
+    </div>
+  </div>  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
