--- a/about.html
+++ b/about.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Front-end developer with a background in linguistics| Rebecca Tamachiro</title>
+  <meta name="description" content="Here you can read a little about my career path and how I incorporate my background in linguistics and tech support on my approach to front-end development.">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/styles.css">
@@ -12,7 +13,7 @@
 <body>
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
     <div class="container">
-      <a class="navbar-brand" href="/">Rebecca</a>
+      <a class="navbar-brand" href="/" title="Navbar brand">Rebecca</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -20,13 +21,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
+            <a class="nav-link active" aria-current="page" href="/" title="Rebecca Tamachiro homepage">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about.html">About Me</a>
+            <a class="nav-link" href="/about.html" title="About Rebecca Tamachiro">About Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about.html#contact">Contact Me</a>
+            <a class="nav-link" href="/about.html#contact" title="Contact Rebecca Tamachiro">Contact Me</a>
           </li>
         </ul>
       </div>
@@ -53,9 +54,9 @@
   </div>
   <div id="contact" class="my-5">
     <h2>📮 Contact me</h2>
-    <a href="mailto:[email]" class="email-link"> rebecca2t@gmail.com </a>
+    <a href="mailto:[email]" class="email-link" title="Mailto Rebecca Tamachiro"> rebecca2t@gmail.com </a>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
-</html>
+</html> 
