--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Front-end Developer | Rebecca Tamachiro</title>
+  <meta name="description" content="Hi I am Rebecca Tamachiro. Front-end Developer based in Lisbon. See the most recent projects I've contributed to on this portfolio.">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/styles.css">
@@ -12,7 +13,7 @@
 <body>
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
     <div class="container">
-      <a class="navbar-brand" href="/">Rebecca</a>
+      <a class="navbar-brand" href="/" title="Navbar brand">Rebecca</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -20,13 +21,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
+            <a class="nav-link active" aria-current="page" href="/" title="Rebecca Tamachiro homepage">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about.html">About Me</a>
+            <a class="nav-link" href="/about.html" title="About Rebecca Tamachiro">About Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about.html#contact">Contact Me</a>
+            <a class="nav-link" href="/about.html#contact" title="Contact Rebecca Tamachiro">Contact Me</a>
           </li>
         </ul>
       </div>
@@ -43,10 +44,10 @@
   </div>
   <div class="container mb-5">
     <div class="row mt-3">
-        <div class="col-sm-6 d-none d-sm-block">
+        <div class="col-md-6 d-none d-md-block">
           <img src="images/yoga.png" class="img-fluid" alt="Yoga App preview" />
         </div>
-        <div class="col-sm-6 projects-brief">
+        <div class="col-md-6 projects-brief">
           <h2>Yoga app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -56,12 +57,12 @@
           </p>
           <a href="#" class="project-link">Launch yoga app</a>
         </div>
-        <div class="col-sm-6 d-block d-sm-none mt-5">
+        <div class="col-md-6 d-block d-md-none mt-5">
           <img src="images/yoga.png" class="img-fluid" alt="Yoga App preview" />
         </div>
     </div>
     <div class="row mt-5">
-      <div class="col-sm-6 projects-brief">
+      <div class="col-md-6 projects-brief">
         <h2>Weather app</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -71,15 +72,15 @@
         </p>
         <a href="#" class="project-link">Launch weather app</a>
       </div>
-      <div class="col-sm-6">
+      <div class="col-md-6">
         <img src="images/weather.png" class="img-fluid mt-5" alt="Weather App preview" />
       </div>
     </div>
     <div class="row mt-5">
-      <div class="col-sm-6">
-        <img src="images/yogurt.png" class="img-fluid d-none d-sm-block">
+      <div class="col-md-6">
+        <img src="images/yogurt.png" class="img-fluid d-none d-md-block">
       </div>
-      <div class="col-sm-6 projects-brief">
+      <div class="col-md-6 projects-brief">
         <h2>Yogurt landing page</h2>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
