--- a/about.html
+++ b/about.html
@@ -21,10 +21,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/" title="Rebecca Tamachiro homepage">Home</a>
+            <a class="nav-link" aria-current="page" href="/" title="Rebecca Tamachiro homepage">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about.html" title="About Rebecca Tamachiro">About Me</a>
+            <a class="nav-link active" href="/about.html" title="About Rebecca Tamachiro">About Me</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/about.html#contact" title="Contact Rebecca Tamachiro">Contact Me</a>
