--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </div>
     <div class="row mt-5">
       <div class="col-md-6">
-        <img src="images/yogurt.png" class="img-fluid d-none d-md-block">
+        <img src="images/yogurt.png" class="img-fluid d-none d-md-block" alt="Yogurt landing page preview">
       </div>
       <div class="col-md-6 projects-brief">
         <h2>Yogurt landing page</h2>
